Add update and reset password
