# front-end/src/app/services/models.ts
@@ -3,5 +3,6 @@
 export { AuthenticationRequest } from './models/authentication-request';
 export { AuthenticationResponse } from './models/authentication-response';
 export { RegistrationRequest } from './models/registration-request';
+export { ResetPasswordRequest } from './models/reset-password-request';
 export { Role } from './models/role';
 export { User } from './models/user';
