# front-end/src/app/services/models/reset-password-request.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface ResetPasswordRequest {
+  email: string;
+  newPassword: string;
+}
